--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "@TeamStreamix/video-processing-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "url": "https://github.com/TeamStreamix/video-processing-server.git"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
